# tachys

./: .clang-format  .clang-tidy  .clangd  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  sprint.md
.claude/agents/: qa.md  researcher.md  scrum.md  trainer.md
.claude/rules/: lessons.md
.claude/skills/qa/: SKILL.md
.claude/skills/researcher/: SKILL.md
.claude/skills/scrum/: SKILL.md
.claude/skills/trainer/: SKILL.md
benchmarks/: CMakeLists.txt
benchmarks/smoke/: CMakeLists.txt  smoke_bench.cpp
docs/prd/: phase-0-environment.md  phase-1-feed-handler.md  phase-2-concurrent-pipeline.md  phase-3-order-book-strategy.md  phase-4-execution-engine.md  phase-5-risk-management.md  phase-6-multi-venue.md  phase-7-ai-ml-signals.md  phase-8-replay-backtesting.md
docs/superpowers/specs/: 2026-03-28-tachys-dev-workflow-design.md
docs/technical/: phase-0-environment.md  phase-1-feed-handler.md
docs/trainer/: progress.md
exercises/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/book/: CMakeLists.txt
src/core/: CMakeLists.txt
src/feed/: CMakeLists.txt
src/infra/: CMakeLists.txt
src/oms/: CMakeLists.txt
src/risk/: CMakeLists.txt
src/strategy/: CMakeLists.txt
tests/: CMakeLists.txt
tests/smoke/: CMakeLists.txt  smoke_test.cpp
