cmake_minimum_required(VERSION 3.28)
project(tachys LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

add_subdirectory(src/core)
add_subdirectory(src/infra)
add_subdirectory(src/feed)
add_subdirectory(src/book)
add_subdirectory(src/strategy)
add_subdirectory(src/oms)
add_subdirectory(src/risk)
add_subdirectory(src)
